# ChangeLog for dev-db/postgresql-base
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.237 2013/04/05 16:35:25 jer Exp $

  05 Apr 2013; Jeroen Roovers <jer@gentoo.org> postgresql-base-8.4.17.ebuild,
  postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
  postgresql-base-9.2.4.ebuild:
  Stable for HPPA (bug #463884).

  04 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgresql-base-8.4.17.ebuild,
  postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
  postgresql-base-9.2.4.ebuild:
  Stable for ppc64, wrt bug #463884

  04 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgresql-base-8.4.17.ebuild,
  postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
  postgresql-base-9.2.4.ebuild:
  Stable for ppc, wrt bug #463884

  04 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgresql-base-8.4.17.ebuild,
  postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
  postgresql-base-9.2.4.ebuild:
  Stable for x86, wrt bug #463884

  04 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgresql-base-8.4.17.ebuild,
  postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
  postgresql-base-9.2.4.ebuild:
  Stable for amd64, wrt bug #463884

*postgresql-base-9.2.4 (04 Apr 2013)
*postgresql-base-9.1.9 (04 Apr 2013)
*postgresql-base-9.0.13 (04 Apr 2013)
*postgresql-base-8.4.17 (04 Apr 2013)

  04 Apr 2013; Aaron W. Swenson <titanofold@gentoo.org>
  -postgresql-base-8.3.23.ebuild, +postgresql-base-8.4.17.ebuild,
  +postgresql-base-9.0.13.ebuild, +postgresql-base-9.1.9.ebuild,
  +postgresql-base-9.2.4.ebuild, postgresql-base-9999.ebuild:
  Security bump. Bug 463884.

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> -postgresql-base-8.3.20.ebuild,
  -postgresql-base-8.3.21.ebuild, -postgresql-base-8.3.22-r1.ebuild,
  -postgresql-base-8.3.22.ebuild, -postgresql-base-8.4.13.ebuild,
  -postgresql-base-8.4.14.ebuild, -postgresql-base-8.4.15-r1.ebuild,