@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/postgresql-base
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.237 2013/04/05 16:35:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql-base/ChangeLog,v 1.238 2013/04/05 18:39:13 ago Exp $
+
+  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgresql-base-8.4.17.ebuild,
+  postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
+  postgresql-base-9.2.4.ebuild:
+  Stable for alpha, wrt bug #463884
 
   05 Apr 2013; Jeroen Roovers <jer@gentoo.org> postgresql-base-8.4.17.ebuild,
   postgresql-base-9.0.13.ebuild, postgresql-base-9.1.9.ebuild,
